# openwrt-clients

./: feeds.conf
feeds/gdou/iwas4gdou/: Makefile
feeds/hust/mentohust/: Makefile
feeds/njit/agan8021xclient/: Makefile
feeds/njit/njit8021xclient/: Makefile
feeds/njit/njit8021xclient/patches/: patch-v1.2.1.patch
feeds/njit/oh3c/: Makefile
feeds/njit/openssl/: Makefile
gdou/iwas4gdou/: Makefile
njit/agan8021xclient/: Makefile
njit/luci-app-njitclient/: Makefile
njit/luci-app-njitclient/files/root/etc/init.d/: njitclient
njit/luci-app-njitclient/files/root/usr/sbin/: njit-looper
njit/njit8021xclient/: Makefile
njit/njit8021xclient/patches/: 0001-Fix-issue-12-auth.c-DefaultTimeout.patch  0002-Fix-issue-13-autoreconf-subdir-objects.patch  0003-Fix-Dependence.patch
scut/: ReadMe.html
scut/scutclient/: Makefile
scut/scutclient/src/: Makefile.am  README.html  auth.c  autogen.sh  configure.ac  main.c  scutclient.c  scutclient.h  srun.c
sysu/: ReadMe.html
sysu/sysu8021xclient/src/: Makefile.am  README.html  configure.ac  url.c  url.h
