sbin_PROGRAMS = client
client_SOURCES = auth.c debug.h main.c scutclient.c scutclient.h

client_CFLAGS = $(NULL)
client_LDADD  = -lpcap

# Uncomment the following lines if you need MD5 or SHA256 algorithm
# client_CFLAGS += @libcrypto_CFLAGS@
# client_LDADD  += @libcrypto_LIBS@

EXTRA_DIST = README.html

