dnl Run autoreconf --install to generate ./configure from this file
AC_INIT([sysu8021xclient], [1.0], [sysu8021xclient-bugs@lists.sourceforge.net], [], [http://sourceforge.net/projects/sysu8021xclient/])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

